--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <li><a href="/users">Users</a></li>
         <li><a href="/photos">Photos</a></li>
         <li><a href="/user_sign_up">Sign Up</a></li>
+        <li><a href="/user_sign_out">Sign Out</a></li>
       </ul>
     </nav>
     <!-- to display notices and alerts at the top of the page 9after the nav  whenever there are any -->
