--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,15 +4,17 @@
   <dt>ID</dt>
   <dd><%= @user.id %></dd>
 
-  <dt>Edit user</dt>
-  <dd>
-    <form action="/update_user/<%= @user.id %>" >
-      <label for="browser_username">Username</label>
-      <input id="browser_username" type="text" name="input_username" placeholder="Enter a username..." value="<%= @user.username %>">
+  <% if session["user_id"].present? && session["user_id"] == @user.id %>
+    <dt>Edit user</dt>
+    <dd>
+      <form action="/update_user/<%= @user.id %>" >
+        <label for="browser_username">Username</label>
+        <input id="browser_username" type="text" name="input_username" placeholder="Enter a username..." value="<%= @user.username %>">
 
-      <button>Update user</button>
-    </form>
-  </dd>
+        <button>Update user</button>
+      </form>
+    </dd>
+  <% end %>
 </dl>
 
 <h2>Own photos (<%= @user.own_photos.count %>)</h2>
