--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,18 @@
   <body>
     <nav>
       <ul>
+        <% user_id=session["user_id"] %>
+        <% if user_id.present? %>
+          <li><a href="/user_sign_out">Sign Out</a></li>
+        <% else %>
+          <li><a href="/user_sign_in">Sign In</a></li>
+          <li><a href="/user_sign_up">Sign Up</a></li>
+        <% end %>
         <li><a href="/users">Users</a></li>
         <li><a href="/photos">Photos</a></li>
-        <li><a href="/user_sign_up">Sign Up</a></li>
-        <li><a href="/user_sign_out">Sign Out</a></li>
+        <% if user_id.present? %>
+          <li><%= session["user_id"] %></li>
+        <% end %>
       </ul>
     </nav>
     <!-- to display notices and alerts at the top of the page 9after the nav  whenever there are any -->
