associations for "Comment" class complete

--- a/app/views/photos/details.html.erb
+++ b/app/views/photos/details.html.erb
@@ -55,7 +55,7 @@
   <% @photo.comments.each do |comment| %>
   <tr>
     <td>
-      <%= comment.commenter.username %>
+      <%= comment.author.username %>
     </td>
 
     <td>
